# HoloCubic_idf

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  common.h  idf_component.yml  main.cpp
main/app/: app_conf.h
main/app/game_2048/: game2048_contorller.h  game_2048.cpp  game_2048.h  game_2048_gui.c
main/app/weather/: weather.cpp  weather.h  weather_image.h
main/drives/: display.c  display.h  mpu.c  mpu.h  ws2812.c  ws2812.h
main/system/: app_controller.cpp  app_controller.h  app_controller_proxy.cpp  app_controller_proxy.h  app_interface.h  control_action_interface.h
main/ui/: menu.c  menu.h
